fixed comma problems, added overflow hidden

--- a/src/components/calculator/calculator.scss
+++ b/src/components/calculator/calculator.scss
@@ -24,6 +24,7 @@
     border-radius: 0 0 0.5rem 0.5rem;
 
     .contentContainer {
+      overflow: hidden;
       display: flex;
       align-items: flex-end;
       justify-content: flex-end;
@@ -36,7 +37,6 @@
         font-size: 2.2rem;
         font-weight: 600;
         margin: 0 1rem 1rem 0;
-      }
     }
   }
 
